--- a/DragonBonesDesignPanelLib/src/core/view/AnimationControlView.mxml
+++ b/DragonBonesDesignPanelLib/src/core/view/AnimationControlView.mxml
@@ -3,14 +3,28 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark" 
 		  xmlns:mx="library://ns.adobe.com/flex/mx" 
 		  >
+	
+	<fx:Script>
+		<![CDATA[
+			import core.SettingManager;
+			[Bindable]
+			private var _settingManager:SettingManager = SettingManager.getInstance();
+			
+			protected function behaviorAdvancedSwitch_clickHandler(event:MouseEvent):void
+			{
+				_settingManager.animationAdvancedExpand = !_settingManager.animationAdvancedExpand 
+			}
+		]]>
+	</fx:Script>
+	
 	<s:VGroup width="100%" height="100%" gap="0">
 		<s:HGroup width="100%" gap="0">
 			<s:Button width="100%" height="24" cornerRadius="0" fontWeight="bold"
 					  label="{resourceManager.getString('resources','behaviorList')}"
 					  />
 			
-			<s:ToggleButton width="36" height="24" cornerRadius="0" label="&lt;&lt;" 
-							id="behaviorAdvancedSwitch"
+			<s:Button width="36" height="24" cornerRadius="0" label="{_settingManager.animationAdvancedExpand?'>>' : '&lt;&lt;'}" 
+							id="behaviorAdvancedSwitch" click="behaviorAdvancedSwitch_clickHandler(event)"
 							/>
 			
 		</s:HGroup>
@@ -28,79 +42,81 @@
 					</s:stroke>
 				</s:Line>
 				
-					<s:VGroup height="100%" gap="0" paddingLeft="6" paddingRight="6">
-						<s:HGroup width="100%" verticalAlign="middle">
-							<s:Label width="100%" height="24"
-									 text="{resourceManager.getString('resources','totalTimeSec')}"
-									 verticalAlign="middle"/>
-							
-							<s:Label height="24"
-									 />
-							
-						</s:HGroup>
-						
+				<s:VGroup id="animationAdvancedPanel" height="100%" gap="0" paddingLeft="6" paddingRight="6"
+						  visible="{_settingManager.animationAdvancedExpand}" 
+						  includeInLayout="{_settingManager.animationAdvancedExpand}">
+					<s:HGroup width="100%" verticalAlign="middle">
 						<s:Label width="100%" height="24"
-								 text="{resourceManager.getString('resources','totalTimeScale')}"
+								 text="{resourceManager.getString('resources','totalTimeSec')}"
 								 verticalAlign="middle"/>
 						
-						<s:HGroup width="100%" verticalAlign="middle">
-							<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
-											  id="numAnimationScale"
-											  maximum="50000" minimum="0" stepSize="5"
-											  />
-							
-						</s:HGroup>
+						<s:Label height="24" id="numAnimationTotalTime" verticalAlign="middle"
+								 />
 						
-						<s:Label width="100%" height="24"
-								 text="{resourceManager.getString('resources','blendingTime')}"
-								 verticalAlign="middle"/>
+					</s:HGroup>
+					
+					<s:Label width="100%" height="24"
+							 text="{resourceManager.getString('resources','totalTimeScale')}"
+							 verticalAlign="middle"/>
+					
+					<s:HGroup width="100%" verticalAlign="middle">
+						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+										  id="numAnimationScale"
+										  maximum="50000" minimum="0" stepSize="5"
+										  />
 						
-						<s:HGroup width="100%" verticalAlign="middle">
-							<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
-											  id="numFadeInTime"
-											  maximum="50000" minimum="0" snapInterval="0.001" stepSize="0.1"
-											  />
-							
-						</s:HGroup>
+					</s:HGroup>
+					
+					<s:Label width="100%" height="24"
+							 text="{resourceManager.getString('resources','blendingTime')}"
+							 verticalAlign="middle"/>
+					
+					<s:HGroup width="100%" verticalAlign="middle">
+						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+										  id="numFadeInTime"
+										  maximum="50000" minimum="0" snapInterval="0.001" stepSize="0.1"
+										  />
 						
-						<s:Label width="100%" height="24"
-								 text="{resourceManager.getString('resources','loop')}"
-								 verticalAlign="middle"/>
+					</s:HGroup>
+					
+					<s:Label width="100%" height="24"
+							 text="{resourceManager.getString('resources','loop')}"
+							 verticalAlign="middle"/>
+					
+					<s:HGroup width="100%" verticalAlign="middle">
+						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+										  id="numLoop" 
+										  maximum="100" minimum="0" snapInterval="1"
+										  />
 						
-						<s:HGroup width="100%" verticalAlign="middle">
-							<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
-											  id="numLoop" 
-											  maximum="100" minimum="0" snapInterval="1"
-											  />
-							
-						</s:HGroup>
+					</s:HGroup>
+					
+					<s:HGroup width="100%" verticalAlign="middle">
+						<s:CheckBox label="{resourceManager.getString('resources','autotween')}"
+									id="checkAutoTween"
+									/>
 						
-						<s:HGroup width="100%" verticalAlign="middle">
-							<s:CheckBox label="{resourceManager.getString('resources','autotween')}"
-										id="checkAutoTween"
-										/>
-							
-						</s:HGroup>
+					</s:HGroup>
+					
+					<!--
+					<s:Label width="100%" height="24"
+							 text="{resourceManager.getString('resources','keyFrameEase')}"
+							 verticalAlign="middle"/>
+					
+					<s:HGroup width="100%" verticalAlign="middle" height="24">
+						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+										  id="numTweenEasing" 
+										  maximum="2" minimum="-1" snapInterval="0.05"
+										  />
 						
-						<!--
-						<s:Label width="100%" height="24"
-								 text="{resourceManager.getString('resources','keyFrameEase')}"
-								 verticalAlign="middle"/>
+						<s:CheckBox width="16" label=""
+									id="checkTweenEasing"
+									/>
 						
-						<s:HGroup width="100%" verticalAlign="middle" height="24">
-							<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
-											  id="numTweenEasing" 
-											  maximum="2" minimum="-1" snapInterval="0.05"
-											  />
-							
-							<s:CheckBox width="16" label=""
-										id="checkTweenEasing"
-										/>
-							
-						</s:HGroup>
-						-->
-						
-					</s:VGroup>
+					</s:HGroup>
+					-->
+					
+				</s:VGroup>
 					
 			</s:HGroup>
 			
