--- a/DragonBonesDesignPanelLib/src/core/view/BoneControlView.mxml
+++ b/DragonBonesDesignPanelLib/src/core/view/BoneControlView.mxml
@@ -5,14 +5,25 @@
 		  
 		  xmlns:components="core.view.components.*"
 		  >
+	<fx:Script>
+		<![CDATA[
+			import core.SettingManager;
+			[Bindable]
+			private var _settingManager:SettingManager = SettingManager.getInstance();
+			
+			protected function boneAdvancedSwitch_clickHandler(event:MouseEvent):void
+			{
+				_settingManager.skeletonAdvancedExpand = !_settingManager.skeletonAdvancedExpand;
+			}
+		]]>
+	</fx:Script>
 	
 	<s:VGroup width="100%" height="100%" gap="0">
 		<s:HGroup width="100%" gap="0">
 			<s:Button width="100%" height="24" cornerRadius="0" fontWeight="bold" label="{resourceManager.getString('resources','boneTree')}"/>
-			
-			<s:ToggleButton width="36" height="24" label="&lt;&lt;" cornerRadius="0"
-							id="boneAdvancedSwitch"
-							/>
+			<s:Button width="36" height="24" cornerRadius="0" label="{_settingManager.skeletonAdvancedExpand ?'>>' : '&lt;&lt;'}" 
+					  id="boneAdvancedSwitch" click="boneAdvancedSwitch_clickHandler(event)"
+					  />
 			
 		</s:HGroup>
 		
@@ -29,7 +40,9 @@
 					</s:stroke>
 				</s:Line>
 				
-				<s:VGroup height="100%" gap="0" paddingLeft="6" paddingRight="6">
+				<s:VGroup height="100%" gap="0" paddingLeft="6" paddingRight="6"
+						   visible="{_settingManager.skeletonAdvancedExpand}"
+						   includeInLayout="{_settingManager.skeletonAdvancedExpand}">
 					<s:Label width="100%" height="24" verticalAlign="middle" text="{resourceManager.getString('resources','totalFramesScale')}"/>
 					
 					<s:HGroup width="100%" verticalAlign="middle">
