--- a/DragonBonesDesignPanelLib/src/plugin/view/ExportWindow.mxml
+++ b/DragonBonesDesignPanelLib/src/plugin/view/ExportWindow.mxml
@@ -49,7 +49,7 @@
 				if (configObject)
 				{
 					_isMerged = configObject.value == GlobalConstValues.CONFIG_TYPE_MERGED;
-					var backupselected:int = textureFormatDropDownList.selectedIndex;
+					var backupselected:int = _settingManager.exportTextureFormatIndex;
 					
 					if (_isMerged)
 					{
@@ -73,6 +73,8 @@
 			
 			private function changeHandler(event:Event):void
 			{
+				_settingManager.exportTextureFormatIndex = textureFormatDropDownList.selectedIndex;
+				
 				updateView();
 			}
 			
@@ -132,7 +134,7 @@
 							/>
 			<s:DropDownList width="100%" height="24" textAlign="right" 
 							id="textureFormatDropDownList" labelField="label" 
-							selectedIndex="@{_settingManager.exportTextureFormatIndex}" 
+							selectedIndex="{_settingManager.exportTextureFormatIndex}" 
 							change="changeHandler(event)"
 							/>
 			<s:NumericStepper width="100%" minimum="0.1" maximum="32" snapInterval="0.01" stepSize="0.5" textAlign="right"
