--- a/DragonBonesDesignPanelLib/src/core/view/ArmaturesPanel.mxml
+++ b/DragonBonesDesignPanelLib/src/core/view/ArmaturesPanel.mxml
@@ -2,25 +2,15 @@
 <s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 xmlns:mxml="robotlegs.bender.mxml.*" 
-		 xmlns:mvcs="robotlegs.bender.bundles.mvcs.*"
+		 
 		 xmlns:core="core.*"
 		 xmlns:coreView="core.view.*"
-		 xmlns:plugin="plugin.*"
 		 xmlns:local="*"
 		 >
 	
-	<fx:Declarations>
-		<mxml:ContextBuilderTag id="contextTag">
-			<mvcs:MVCSBundle/>
-			<core:ShareConfig id="shareConfig"/>
-			<plugin:PluginConfig/>
-		</mxml:ContextBuilderTag>
-	</fx:Declarations>
-	
 	<fx:Script>
 		<![CDATA[
-			
+			import core.*;
 		]]>
 	</fx:Script>
 	
