--- a/DragonBonesDesignPanelPlugin/src/DragonBonesDesignPanel.mxml
+++ b/DragonBonesDesignPanelPlugin/src/DragonBonesDesignPanel.mxml
@@ -2,18 +2,37 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
+			   
+			   xmlns:mxml="robotlegs.bender.mxml.*" 
+			   xmlns:mvcs="robotlegs.bender.bundles.mvcs.*"
+			   
 			   xmlns:core="core.*"
+			   xmlns:coreView="core.view.*"
+			   
+			   xmlns:plugin="plugin.*"
+			   xmlns:pluginView="plugin.view.*"
+			   
 			   xmlns:designPanel="designPanel.*"
 			   xmlns:designPanelView="designPanelPlugin.view.*"
 			   xmlns:component="designPanelPlugin.view.component.*"
-			   xmlns:view="plugin.view.*"
+			   
 			   xmlns:local="*"
 			   fontSize="12"
-			   applicationComplete="applicationCompleteHandler()" 
+			   applicationComplete="applicationCompleteHandler()"
 			   >
+	
+	<fx:Declarations>
+		<mxml:ContextBuilderTag id="contextTag">
+			<mvcs:MVCSBundle/>
+			<core:ShareConfig id="shareConfig"/>
+			<plugin:PluginConfig/>
+		</mxml:ContextBuilderTag>
+	</fx:Declarations>
+	
 	<fx:Metadata>
 		[ResourceBundle("resources")]
 	</fx:Metadata>
+	
 	<fx:Script>
 		<![CDATA[
 			import cloud.GA.DBGATrackerManager;
@@ -24,7 +43,6 @@
 			import core.utils.GlobalConstValues;
 			
 			import dragonBones.core.DragonBones;
-			import dragonBones.utils.ConstValues;
 			
 			import dragonbones.cloud.DBCloud;
 			import dragonbones.cloud.DBNetworkUtils;
@@ -35,8 +53,7 @@
 			import plugin.view.ImportWindow;
 			import plugin.view.TextureAtlasWindow;
 			import plugin.view.XMLWindow;
-			
-			import view.AboutWindow;
+			import plugin.view.AboutWindow;
 			
 			[Bindable]
 			private var _settingManager:SettingManager = SettingManager.getInstance();
@@ -104,25 +121,25 @@
 				{
 					case buttonImport:
 						var importWindow:ImportWindow = new ImportWindow();
-						importWindow.shareConfig = armaturesPanel.shareConfig;
+						importWindow.shareConfig = shareConfig;
 						importWindow.showWindow(this);
 						break;
 					
 					case buttonExport:
 						var exportWindow:ExportWindow = new ExportWindow();
-						exportWindow.shareConfig = armaturesPanel.shareConfig;
+						exportWindow.shareConfig = shareConfig;
 						exportWindow.showWindow(this);
 						break;
 					
 					case buttonTextureAtlas:
 						var textureAtlasWindow:TextureAtlasWindow = new TextureAtlasWindow();
-						textureAtlasWindow.shareConfig = armaturesPanel.shareConfig;
+						textureAtlasWindow.shareConfig = shareConfig;
 						textureAtlasWindow.showWindow(this, true);
 						break;
 					
 					case buttonXML:
 						var xmlWindow:XMLWindow = new XMLWindow();
-						xmlWindow.shareConfig = armaturesPanel.shareConfig;
+						xmlWindow.shareConfig = shareConfig;
 						xmlWindow.showWindow(this, true);
 						break;
 					
@@ -135,7 +152,7 @@
 			
 			private function armaturesPanelDispatchEvent(e:Event):void
 			{
-				armaturesPanel.shareConfig.dispatcher.dispatchEvent(e);
+				shareConfig.dispatcher.dispatchEvent(e);
 			}
 			
 			private function checkOnlineStatus():void
@@ -196,7 +213,7 @@
 							/>
 		</s:HGroup>
 		
-		<view:ArmaturesPanel width="100%" height="100%"
+		<coreView:ArmaturesPanel width="100%" height="100%"
 			id="armaturesPanel" 
 			/>
 		
