fix some export bug scale NaN fade in time NaN export data Name null

--- a/DragonBonesDesignPanelPlugin/src/plugin/view/ExportWindow.mxml
+++ b/DragonBonesDesignPanelPlugin/src/plugin/view/ExportWindow.mxml
@@ -171,7 +171,7 @@
 							selectedIndex="{_settingManager.exportTextureFormatIndex}" 
 							change="changeHandler(event)"
 							/>
-			<s:NumericStepper width="100%" minimum="0.1" maximum="32" snapInterval="0.01" stepSize="0.5" textAlign="right"
+			<mx:NumericStepper width="100%" minimum="0.01" maximum="64" stepSize="0.01" textAlign="right"
 							  value="@{_settingManager.exportScale}" visible="{!_isSWF}" includeInLayout="{!_isSWF}"
 							  />
 			
