--- a/DragonBonesDesignPanelLib/src/core/view/AnimationControlView.mxml
+++ b/DragonBonesDesignPanelLib/src/core/view/AnimationControlView.mxml
@@ -60,7 +60,7 @@
 							 verticalAlign="middle"/>
 					
 					<s:HGroup width="100%" verticalAlign="middle">
-						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+						<mx:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
 										  id="numAnimationScale"
 										  maximum="50000" minimum="0" stepSize="5"
 										  />
@@ -72,9 +72,9 @@
 							 verticalAlign="middle"/>
 					
 					<s:HGroup width="100%" verticalAlign="middle">
-						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+						<mx:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
 										  id="numFadeInTime"
-										  maximum="50000" minimum="0" snapInterval="0.001" stepSize="0.1"
+										  maximum="50000" minimum="0" stepSize="0.001"
 										  />
 						
 					</s:HGroup>
@@ -84,9 +84,9 @@
 							 verticalAlign="middle"/>
 					
 					<s:HGroup width="100%" verticalAlign="middle">
-						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+						<mx:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
 										  id="numLoop" 
-										  maximum="100" minimum="0" snapInterval="1"
+										  maximum="100" minimum="0" stepSize="1"
 										  />
 						
 					</s:HGroup>
