--- a/DragonBonesDesignPanelLib/src/core/view/BoneControlView.mxml
+++ b/DragonBonesDesignPanelLib/src/core/view/BoneControlView.mxml
@@ -46,9 +46,9 @@
 					<s:Label width="100%" height="24" verticalAlign="middle" text="{resourceManager.getString('resources','totalFramesScale')}"/>
 					
 					<s:HGroup width="100%" verticalAlign="middle">
-						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+						<mx:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
 										  id="numScale" 
-										  maximum="5000" minimum="0" snapInterval="1"
+										  maximum="5000" minimum="0" stepSize="1"
 										  />
 						
 					</s:HGroup>
@@ -56,9 +56,9 @@
 					<s:Label width="100%" height="24"  verticalAlign="middle" text="{resourceManager.getString('resources','playDelay')}"/>
 					
 					<s:HGroup width="100%" verticalAlign="middle">
-						<s:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
+						<mx:NumericStepper width="100%" height="24" cornerRadius="0" textAlign="left"
 										  id="numOffset" 
-										  maximum="100" minimum="-100" snapInterval="1"
+										  maximum="100" minimum="-100" stepSize="1"
 										  />
 						
 					</s:HGroup>
